--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </main>
     <script src="sketch.js"></script>
     <script src="cell.js"></script>
+    <script src="queue.js"></script>
+    <script src="maze.js"></script>
 
   </body>
 </html>
